mistake-fixed-consult-app

--- a/free-consult-app/package.json
+++ b/free-consult-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://immsuel.github.io/test2",
+  "homepage": "https://immsuel.github.io/test2/",
   "name": "free-consult-app",
   "private": true,
   "version": "0.0.0",
